{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 51,
  "lineage": "53b105b3-adcb-3483-9234-95ddbe592028",
  "resources": [
    {
      "module": "module.apps.module.wordpress.module.compute.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068309650382:loadbalancer/terraform-staging-wordpress-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-staging-wordpress-elb-1662902023.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-staging-wordpress-elb",
            "idle_timeout": 300,
            "instances": [
              "i-04abc4efc9d6f898e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-staging-wordpress-elb",
            "security_groups": [
              "sg-023d6a0bc8b1aedd0"
            ],
            "source_security_group": "068309650382/terraform-staging-wordpress-elb-sg",
            "source_security_group_id": "sg-023d6a0bc8b1aedd0",
            "subnets": [
              "subnet-02207da80f391d6cd",
              "subnet-06036dedd0cc0e3c2",
              "subnet-0d8a631d2913dae4b"
            ],
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-wordpress-elb",
              "Project": "Terraform Workshop"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.apps.module.wordpress.module.identity.module.iam.aws_iam_instance_profile.wordpress_instance",
            "module.apps.module.wordpress.module.identity.module.iam.aws_iam_role.wordpress_instance",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_database",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_elb",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_instance",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group_rule.wordpress-database-from-instance",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group_rule.wordpress-instance-from-load-balancer",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group_rule.wordpress-load-balancer-to-instance",
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.apps.module.wordpress.module.networking.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:security-group/sg-0b9020a348f7b2ff2",
            "description": "Allow http traffic from instance",
            "egress": [],
            "id": "sg-0b9020a348f7b2ff2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Accept traffic from instance security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb56d9b155e2a1b5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-staging-wordpress-database-sg",
            "name_prefix": "",
            "owner_id": "068309650382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-wordpress-database-sg",
              "Project": "Terraform Workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.apps.module.wordpress.module.networking.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:security-group/sg-023d6a0bc8b1aedd0",
            "description": "Allow http/s traffic from the internet and forward to wordpress instance",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Send traffic from load balancer to instance security group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb56d9b155e2a1b5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-023d6a0bc8b1aedd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-staging-wordpress-elb-sg",
            "name_prefix": "",
            "owner_id": "068309650382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-wordpress-elb-sg",
              "Project": "Terraform Workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.apps.module.wordpress.module.networking.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:security-group/sg-0eb56d9b155e2a1b5",
            "description": "Allow http traffic from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb56d9b155e2a1b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Accept traffic from load balancer security group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023d6a0bc8b1aedd0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-staging-wordpress-instance-sg",
            "name_prefix": "",
            "owner_id": "068309650382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-wordpress-instance-sg",
              "Project": "Terraform Workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.apps.module.wordpress.module.networking.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress-database-from-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Accept traffic from instance security group",
            "from_port": 3306,
            "id": "sgrule-3805495555",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b9020a348f7b2ff2",
            "self": false,
            "source_security_group_id": "sg-0eb56d9b155e2a1b5",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_database",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_instance",
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.apps.module.wordpress.module.networking.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress-instance-from-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Accept traffic from load balancer security group",
            "from_port": 80,
            "id": "sgrule-826498154",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eb56d9b155e2a1b5",
            "self": false,
            "source_security_group_id": "sg-023d6a0bc8b1aedd0",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_elb",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_instance",
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.apps.module.wordpress.module.networking.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress-load-balancer-to-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Send traffic from load balancer to instance security group",
            "from_port": 80,
            "id": "sgrule-2660724637",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-023d6a0bc8b1aedd0",
            "self": false,
            "source_security_group_id": "sg-0eb56d9b155e2a1b5",
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_elb",
            "module.apps.module.wordpress.module.networking.module.security_group.aws_security_group.wordpress_instance",
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.networking.module.vpc.aws_customer_gateway.this",
            "module.networking.module.vpc.aws_db_subnet_group.database",
            "module.networking.module.vpc.aws_default_network_acl.this",
            "module.networking.module.vpc.aws_default_route_table.default",
            "module.networking.module.vpc.aws_default_security_group.this",
            "module.networking.module.vpc.aws_default_vpc.this",
            "module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.networking.module.vpc.aws_flow_log.this",
            "module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_network_acl.database",
            "module.networking.module.vpc.aws_network_acl.elasticache",
            "module.networking.module.vpc.aws_network_acl.intra",
            "module.networking.module.vpc.aws_network_acl.outpost",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_network_acl.redshift",
            "module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.elasticache",
            "module.networking.module.vpc.aws_route_table.intra",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_route_table.redshift",
            "module.networking.module.vpc.aws_route_table_association.database",
            "module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.networking.module.vpc.aws_route_table_association.intra",
            "module.networking.module.vpc.aws_route_table_association.outpost",
            "module.networking.module.vpc.aws_route_table_association.private",
            "module.networking.module.vpc.aws_route_table_association.public",
            "module.networking.module.vpc.aws_route_table_association.redshift",
            "module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_subnet.elasticache",
            "module.networking.module.vpc.aws_subnet.intra",
            "module.networking.module.vpc.aws_subnet.outpost",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_subnet.redshift",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.networking.module.vpc.aws_vpc_endpoint.dms",
            "module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.networking.module.vpc.aws_vpn_gateway.this",
            "module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05855c53ad0504104",
            "domain": "vpc",
            "id": "eipalloc-02bf3e942be6c5ba5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc252ed84a4a632f",
            "private_dns": "ip-10-0-1-206.ec2.internal",
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-52-87-49-158.compute-1.amazonaws.com",
            "public_ip": "52.87.49.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07e60dd93553413b2",
            "domain": "vpc",
            "id": "eipalloc-00d30033ba6cd5fbb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d2b66b15e9e2a6a7",
            "private_dns": "ip-10-0-3-16.ec2.internal",
            "private_ip": "10.0.3.16",
            "public_dns": "ec2-52-55-109-92.compute-1.amazonaws.com",
            "public_ip": "52.55.109.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-064bee106368fd3ff",
            "domain": "vpc",
            "id": "eipalloc-0fde41c446d99c710",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052076b893f4ac109",
            "private_dns": "ip-10-0-4-220.ec2.internal",
            "private_ip": "10.0.4.220",
            "public_dns": "ec2-3-213-84-1.compute-1.amazonaws.com",
            "public_ip": "3.213.84.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:internet-gateway/igw-025829d3c13dc9f4a",
            "id": "igw-025829d3c13dc9f4a",
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bf3e942be6c5ba5",
            "id": "nat-0be88da92ebd7c412",
            "network_interface_id": "eni-0bc252ed84a4a632f",
            "private_ip": "10.0.1.206",
            "public_ip": "52.87.49.158",
            "subnet_id": "subnet-06036dedd0cc0e3c2",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-us-east-1a",
              "Terraform": "Yes"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d30033ba6cd5fbb",
            "id": "nat-01d62d3de3314a580",
            "network_interface_id": "eni-0d2b66b15e9e2a6a7",
            "private_ip": "10.0.3.16",
            "public_ip": "52.55.109.92",
            "subnet_id": "subnet-02207da80f391d6cd",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-us-east-1b",
              "Terraform": "Yes"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fde41c446d99c710",
            "id": "nat-06dba6ad2223466b5",
            "network_interface_id": "eni-052076b893f4ac109",
            "private_ip": "10.0.4.220",
            "public_ip": "3.213.84.1",
            "subnet_id": "subnet-0d8a631d2913dae4b",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-us-east-1c",
              "Terraform": "Yes"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08f2ec04c851e56091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0be88da92ebd7c412",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f2ec04c851e5609",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e21fefa540a4dba51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01d62d3de3314a580",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e21fefa540a4dba5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0431c1d96b3ad274d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06dba6ad2223466b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0431c1d96b3ad274d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-025829d3c13dc9f4a",
            "id": "r-rtb-00fe2dfb85eef04771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fe2dfb85eef0477",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:route-table/rtb-08f2ec04c851e5609",
            "id": "rtb-08f2ec04c851e5609",
            "owner_id": "068309650382",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be88da92ebd7c412",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1a",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:route-table/rtb-0e21fefa540a4dba5",
            "id": "rtb-0e21fefa540a4dba5",
            "owner_id": "068309650382",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d62d3de3314a580",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1b",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:route-table/rtb-0431c1d96b3ad274d",
            "id": "rtb-0431c1d96b3ad274d",
            "owner_id": "068309650382",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06dba6ad2223466b5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1c",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:route-table/rtb-00fe2dfb85eef0477",
            "id": "rtb-00fe2dfb85eef0477",
            "owner_id": "068309650382",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025829d3c13dc9f4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057aa0e668b308090",
            "route_table_id": "rtb-08f2ec04c851e5609",
            "subnet_id": "subnet-03d5142a51a2fa3f0"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd6b6e030e10742c",
            "route_table_id": "rtb-0e21fefa540a4dba5",
            "subnet_id": "subnet-05f97ad4ead43c7ea"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076c28a80c2ae1fcb",
            "route_table_id": "rtb-0431c1d96b3ad274d",
            "subnet_id": "subnet-055865d486938618e"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f29da5df261202b",
            "route_table_id": "rtb-00fe2dfb85eef0477",
            "subnet_id": "subnet-06036dedd0cc0e3c2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011df0de2981d42e2",
            "route_table_id": "rtb-00fe2dfb85eef0477",
            "subnet_id": "subnet-02207da80f391d6cd"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e42e21e0dc7c8d8c",
            "route_table_id": "rtb-00fe2dfb85eef0477",
            "subnet_id": "subnet-0d8a631d2913dae4b"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:subnet/subnet-03d5142a51a2fa3f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/23",
            "id": "subnet-03d5142a51a2fa3f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1a",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1a",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:subnet/subnet-05f97ad4ead43c7ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/23",
            "id": "subnet-05f97ad4ead43c7ea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1b",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1b",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:subnet/subnet-055865d486938618e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.14.0/23",
            "id": "subnet-055865d486938618e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1c",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-private-us-east-1c",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:subnet/subnet-06036dedd0cc0e3c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "id": "subnet-06036dedd0cc0e3c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public-us-east-1a",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public-us-east-1a",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:subnet/subnet-02207da80f391d6cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "id": "subnet-02207da80f391d6cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public-us-east-1b",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public-us-east-1b",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:subnet/subnet-0d8a631d2913dae4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/23",
            "id": "subnet-0d8a631d2913dae4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public-us-east-1c",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc-public-us-east-1c",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-0845f2196d6064be2"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068309650382:vpc/vpc-0845f2196d6064be2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-00151436426239314",
            "default_route_table_id": "rtb-0a0712c86a5c9cb35",
            "default_security_group_id": "sg-0d9300c3dabbba5c5",
            "dhcp_options_id": "dopt-c91849b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0845f2196d6064be2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0712c86a5c9cb35",
            "owner_id": "068309650382",
            "tags": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Developer": "Muhammet Arslan",
              "Environment": "staging",
              "Name": "terraform-staging-vpc",
              "Terraform": "Yes"
            }
          }
        }
      ]
    }
  ]
}